# SPCBIR

./: CMakeLists.txt  CMakeLists.txtold  CodeValidator.py  Functions.c  Functions.h  IndexedPoint.c  IndexedPoint.h  KDTreeTest.c  KDTreeTest.h  Malloc_Macro.h  SPBPriorityQueue.c  SPBPriorityQueue.h  SPConfig.c  SPConfig.h  SPFinalImageList.c  SPFinalImageList.h  SPImageProc.cpp  SPKDArray.c  SPKDArray.h  SPKDTree.c  SPKDTree.h  SPLogger.c  SPPoint.c  conf_gidi.txt  configTest.txt  linux.config  main.cpp  mainUtils.h  makefile  regError.c  regError.h  test.config  test.py
images/: img0.feats  img1.feats  img10.feats  img11.feats  img12.feats  img13.feats  img14.feats  img15.feats  img16.feats  img17.feats  img18.feats  img19.feats  img2.feats  img20.feats  img21.feats  img22.feats  img23.feats  img24.feats  img25.feats  img26.feats  img27.feats  img28.feats  img29.feats  img3.feats  img30.feats  img31.feats  img32.feats  img33.feats  img34.feats  img35.feats  img36.feats  img37.feats  img38.feats  img39.feats  img4.feats  img40.feats  img41.feats  img42.feats  img43.feats  img44.feats  (+61 more)
